--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 header {
     text-align: center;
-    background: url('images/alireza-mirzabegi-U7L8hBBfSHc-unsplash (1).jpg');
+    background: url("images/alireza-mirzabegi-U7L8hBBfSHc-unsplash.jpg");
     background-size: cover;
     color: white;
   }
